[package]
name = "cmbm"
description = "Command line utility to to control Elgato lights locally."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
